# jhnn

./: CMakeLists.txt  ErrorMessages.lua  JH.lua  JHNN.lua  LICENSE  Linear.lua  LookupTable.lua  README.md  init.c  init.lua  install_lua.sh  jhnn-scm-1.rockspec  jhu-scm-1.rockspec  run_all_tests.sh
cmake/: FindThrust.cmake
lib/: CMakeLists.txt
lib/JH/: CMakeLists.txt  JH.h  init.c
lib/JH/generic/: JH.c  JH.h  JHTensorRandom.c
lib/JHNN/: CMakeLists.txt  JHNN.h  init.c
lib/JHNN/generic/: JHNN.h  LookupTable.c
src/: ClassNLLCriterionD.cu  Encode.c  EqualSet.c  LogSample.c  LogSample.cu  LogScale.c  LogScale.cu  LogSum.c  LogSum.cu  LogSum1d.c  Sample.c  Sample.cu  Scale.c  Scale.cu  cuops.h  init.cpp  init.cu  ops.h  utils.c  utils.h
test/: JH.lua  Linear.lua  LogSum.lua  LookupTable.lua  libcujhu.lua  libjhu.lua
