CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)

# C libraries: JH, JHNN
ADD_SUBDIRECTORY(lib)

FILE(STRINGS lib/JH/generic/JH.h JH_headers NEWLINE_CONSUME)
FILE(WRITE JH_h.lua "return [[")
FILE(APPEND JH_h.lua ${JH_headers})
FILE(APPEND JH_h.lua "]]")

FILE(STRINGS lib/JHNN/generic/JHNN.h JHNN_headers NEWLINE_CONSUME)
FILE(WRITE JHNN_h.lua "return [[")
FILE(APPEND JHNN_h.lua ${JHNN_headers})
FILE(APPEND JHNN_h.lua "]]")

FILE(GLOB luasrc *.lua)

ADD_TORCH_PACKAGE(jhnn "" "${luasrc}")

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/TH")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

MESSAGE("Torch install include: ${Torch_INSTALL_INCLUDE}")
MESSAGE("Torch install lib: ${Torch_INSTALL_LIB}")

INSTALL(FILES "README.md" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/jhnn")
