CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)

# C FFI libraries: JHNN
ADD_SUBDIRECTORY(lib)

FILE(STRINGS lib/JHNN/generic/JHNN.h JHNN_headers NEWLINE_CONSUME)
FILE(WRITE JHNN_h.lua "return [[")
FILE(APPEND JHNN_h.lua ${JHNN_headers})
FILE(APPEND JHNN_h.lua "]]")

FILE(GLOB luasrc *.lua)

ADD_TORCH_PACKAGE(jhnn "" "${luasrc}")

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/TH")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

MESSAGE("Torch install include: ${Torch_INSTALL_INCLUDE}")
MESSAGE("Torch install lib: ${Torch_INSTALL_LIB}")

INSTALL(FILES "README.md" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/jhnn")

# LIBJHU
SET(src src/init.cpp)
ADD_LIBRARY(jhu MODULE ${src})
TARGET_COMPILE_FEATURES(jhu PRIVATE cxx_static_assert)
TARGET_LINK_LIBRARIES(jhu luaT TH)
INSTALL(TARGETS jhu
  RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")
